--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         resultElement.innerHTML = ""; // Clear previous content
 
         const image = document.createElement("img");
-        image.setAttribute("src", isAlive ? "cat_alive.jpg" : "cat_dead.jpg");
+        image.setAttribute("src", isAlive ? "./cat_alive.jpg" : "./cat_dead.jpg");
         image.setAttribute("alt", isAlive ? "Alive Cat" : "Dead Cat");
         resultElement.appendChild(image);
     }
