--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     body {
         font-family: Arial, sans-serif;
         background-color: #f0f0f0;
+        margin: 0;
+        padding: 0;
     }
     #container {
         text-align: center;
         margin-top: 50px;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     h2 {
         color: #333;
@@ -37,7 +35,6 @@
     }
     img {
         max-width: 300px;
-        border-radius: 10px;
         margin-top: 20px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
