--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Esperimento gatto di Schrödinger!</title>
+<title>Schrödinger's Cat Experiment</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -42,8 +42,8 @@
 </head>
 <body>
 <div id="container">
-    <h2>Sei curioso eh?! Clicca e scopri il risultato sul gatto di Schrödinger!</h2>
-    <p>E' vivo o morto?</p>
+    <h2>Schrödinger's Cat Experiment</h2>
+    <p>Is the cat alive or dead?</p>
     <button onclick="observe()">Observe</button>
     <div id="result">
         <!-- Images will be added here -->
