--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </head>
 <body>
 <div id="container">
-    <h2>Schrödinger's Cat Experiment</h2>
-    <p>Is the cat alive or dead?</p>
-    <button onclick="observe()">Observe</button>
+    <h2>Sei curioso eh?! Clicca e scopri il risultato sul gatto di Schrödinger</h2>
+    <p>Il gatto è vivo o morto?</p>
+    <button onclick="observe()">Apri la scatola</button>
     <div id="result">
         <!-- Images will be added here -->
     </div>
