--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     #container {
         text-align: center;
-        margin-top: 150px; /* Aggiunto margine per spostare il contenuto verso il basso */
+        margin-top: 50px; /* Margine superiore per spostare il contenuto più in basso */
         position: relative;
     }
     h2 {
