--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     #container {
         text-align: center;
-        margin-top: 50px; /* Margine superiore per spostare il contenuto più in basso */
+        margin-top: 50px;
         position: relative;
     }
     h2 {
@@ -49,6 +49,7 @@
         left: 50%;
         transform: translateX(-50%);
         z-index: 1;
+        width: 200px; /* Larghezza dell'immagine della scatola */
     }
 </style>
 </head>
