--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     }
     h2 {
         color: #333;
+        position: relative;
+        z-index: 2;
     }
     p {
         color: #666;
@@ -43,32 +45,26 @@
         margin-top: 10px;
         font-weight: bold;
     }
-    #box-container {
+    #box-image {
         position: absolute;
-        top: -180px; /* Posizione dell'immagine della scatola rispetto al contenitore */
+        top: -150px; /* Posizione dell'immagine della scatola rispetto all'intestazione */
         left: 50%;
         transform: translateX(-50%);
         z-index: 1;
-    }
-    #content {
-        padding-top: 200px; /* Spazio sopra il contenuto principale per evitare sovrapposizioni */
+        width: 150px;
     }
 </style>
 </head>
 <body>
 <div id="container">
-    <div id="box-container">
-        <img id="box-image" src="cat_box.jpg" alt="Cat Box">
+    <img id="box-image" src="cat_box.jpg" alt="Cat Box">
+    <h2>Schrödinger's Cat Experiment</h2>
+    <p>Is the cat alive or dead?</p>
+    <button onclick="observe()">Observe</button>
+    <div id="result">
+        <!-- Images will be added here -->
     </div>
-    <div id="content">
-        <h2>Schrödinger's Cat Experiment</h2>
-        <p>Is the cat alive or dead?</p>
-        <button onclick="observe()">Observe</button>
-        <div id="result">
-            <!-- Images will be added here -->
-        </div>
-        <div id="status"></div>
-    </div>
+    <div id="status"></div>
 </div>
 
 <script>
