--- a/index.html
+++ b/index.html
@@ -1,89 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Schrödinger's Cat Experiment</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        margin: 0;
-        padding: 0;
-    }
-    #container {
-        text-align: center;
-        margin-top: 50px;
-        position: relative;
-    }
-    h2 {
-        color: #333;
-        position: relative;
-        z-index: 2;
-    }
-    p {
-        color: #666;
-    }
-    button {
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-    button:hover {
-        background-color: #0056b3;
-    }
-    img {
-        max-width: 300px;
-        margin-top: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    #status {
-        margin-top: 10px;
-        font-weight: bold;
-    }
-    #box-image {
-        position: absolute;
-        top: -1500px; /* Posizione dell'immagine della scatola rispetto all'intestazione */
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1;
-        width: 150px;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Schrödinger's Cat Experiment</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #container {
+            text-align: center;
+            position: relative;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+
+        button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        img {
+            max-width: 300px;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #status {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+
+        #box-image {
+            position: absolute;
+            top: -150px; /* Posizione dell'immagine della scatola rispetto all'intestazione */
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+            width: 150px;
+        }
+    </style>
 </head>
 <body>
-<div id="container">
-    <img id="box-image" src="cat_box.jpg" alt="Cat Box">
-    <h2>Schrödinger's Cat Experiment</h2>
-    <p>Is the cat alive or dead?</p>
-    <button onclick="observe()">Observe</button>
-    <div id="result">
-        <!-- Images will be added here -->
+    <div id="container">
+        <img id="box-image" src="cat_box.jpg" alt="Cat Box">
+        <h2>Schrödinger's Cat Experiment</h2>
+        <p>Is the cat alive or dead?</p>
+        <button onclick="observe()">Observe</button>
+        <div id="result">
+            <!-- Images will be added here -->
+        </div>
+        <div id="status"></div>
     </div>
-    <div id="status"></div>
-</div>
 
-<script>
-    function observe() {
-        // Randomly determine if the cat is alive or dead
-        const isAlive = Math.random() < 0.5;
+    <script>
+        function observe() {
+            // Randomly determine if the cat is alive or dead
+            const isAlive = Math.random() < 0.5;
 
-        // Display the result with images and status message
-        const resultElement = document.getElementById("result");
-        resultElement.innerHTML = ""; // Clear previous content
+            // Display the result with images and status message
+            const resultElement = document.getElementById("result");
+            resultElement.innerHTML = ""; // Clear previous content
 
-        const image = document.createElement("img");
-        image.setAttribute("src", isAlive ? "./cat_alive.jpg" : "./cat_dead.jpg");
-        image.setAttribute("alt", isAlive ? "Alive Cat" : "Dead Cat");
-        resultElement.appendChild(image);
+            const image = document.createElement("img");
+            image.setAttribute("src", isAlive ? "./cat_alive.jpg" : "./cat_dead.jpg");
+            image.setAttribute("alt", isAlive ? "Alive Cat" : "Dead Cat");
+            resultElement.appendChild(image);
 
-        const statusElement = document.getElementById("status");
-        statusElement.textContent = isAlive ? "The cat is alive!" : "The cat is dead!";
-    }
-</script>
+            const statusElement = document.getElementById("status");
+            statusElement.textContent = isAlive ? "The cat is alive!" : "The cat is dead!";
+        }
+    </script>
 </body>
 </html>
