--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <h2>Schrödinger's Cat Experiment</h2>
     <p>Is the cat alive or dead?</p>
     <button onclick="observe()">Observe</button>
+    <img src="cat_box.jpg" alt="Cat Box">
     <div id="result">
         <!-- Images will be added here -->
     </div>
