--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 </head>
 <body>
 <div id="container">
-    <h2>Schrödinger's Cat Experiment</h2>
-    <p>Is the cat alive or dead?</p>
+    <h2>Che collega curiosone! Apri e scopri il risultato sul gatto di Schrödinger</h2>
+    <p>E' vivo o morto?</p>
     <div id="cat-box">
         <img src="cat_box.jpg" alt="Cat Box">
     </div>
-    <button onclick="observe()">Observe</button>
+    <button onclick="observe()">Apri la scatola</button>
+    <div id="status"></div>
     <div id="result">
         <!-- Images will be added here -->
     </div>
-    <div id="status"></div>
 </div>
 
 <script>
