--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         resultElement.appendChild(image);
 
         const statusElement = document.getElementById("status");
-        statusElement.textContent = isAlive ? "The cat is alive!" : "The cat is dead!";
+        statusElement.textContent = isAlive ? "Il gatto è vivo!" : "Il gatto è schiattato!";
     }
 </script>
 </body>
