--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 </head>
 <body>
 <div id="container">
-    <h2>Che collega curiosone! Apri e scopri il risultato sul gatto di Schrödinger</h2>
-    <p>E' vivo o morto?</p>
+    <h2>Vuoi davvero saperlo?</h2>
+    <p>Apri la scatola!</p>
     <div id="cat-box">
         <img src="cat_box.jpg" alt="Cat Box">
     </div>
