--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         resultElement.appendChild(image);
 
         const statusElement = document.getElementById("status");
-        statusElement.textContent = isAlive ? "Il gatto è vivo!" : "Il gatto è schiattato!";
+        statusElement.textContent = isAlive ? " Sei stato proprio tu, la curiosità ha ucciso il gatto!" : "Nessuno, il gatto è vivo e vegeto!";
     }
 </script>
 </body>
