--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         resultElement.appendChild(image);
 
         const statusElement = document.getElementById("status");
-        statusElement.textContent = isAlive ? " Sei stato proprio tu, la curiosità ha ucciso il gatto!" : "Nessuno, il gatto è vivo e vegeto!";
+        statusElement.textContent = isAlive ? "Nessuno, il gatto è vivo e vegeto!" : "Sei stato proprio tu, la curiosità ha ucciso il gatto!";
     }
 </script>
 </body>
