--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     #cat-box {
         margin-top: 20px; /* Aggiunto spazio tra il pulsante e l'immagine */
     }
+    button:disabled {
+        background-color: #999; /* Colore grigio per il pulsante disabilitato */
+        cursor: not-allowed; /* Cambia il cursore quando il pulsante è disabilitato */
+    }
 </style>
 </head>
 <body>
