--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     p {
         color: #000000;
     }
+    h2, p {
+        font-size: 24px; /* Dimensione del testo aumentata a 24px */
+    }
     button {
         background-color: #007bff;
         color: #fff;
