--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Schrödinger's Cat Experiment</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: Roboto, sans-serif;
         background-color: #462;
         margin: 0;
         padding: 0;
