--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         border-radius: 5px;
         cursor: pointer;
         transition: background-color 0.3s;
+        margin-top: 10px;
     }
     button:hover {
         background-color: #0056b3;
@@ -47,7 +48,7 @@
         font-weight: bold;
     }
     #cat-box {
-        margin-top: 600px; /* Aggiunto spazio tra il pulsante e l'immagine */
+        margin-top: 60px; /* Aggiunto spazio tra il pulsante e l'immagine */
     }
     button:disabled {
         background-color: #999; /* Colore grigio per il pulsante disabilitato */
