--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
     body {
         font-family: Roboto, sans-serif;
-        background-color: #462;
+        background-color: #FFFFFF;
         margin: 0;
         padding: 0;
     }
