--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     resultElement.innerHTML = ""; // Clear previous content
 
     const image = document.createElement("img");
-    image.setAttribute("src", isAlive ? "./cat_alive.gif" : "./cat_dead.jpg");
+    image.setAttribute("src", isAlive ? "./cat_alive.gif" : "./cat_dead.gif");
     image.setAttribute("alt", isAlive ? "Alive Cat" : "Dead Cat");
     image.onload = function() {
         const statusElement = document.getElementById("status");
